refactor + removed redundant code

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
+displayName=Musicless Jingles
+author=hootisman
+description=Plays jingles when music is muted
 tags=
-plugins=com.example.ExamplePlugin
+plugins=hootisman.musiclessjingles.MusiclessJinglesPlugin
