--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Musicless Jingles
+displayName=Unmuted Jingles
 author=hootisman
 description=Plays jingles when music is muted
 tags=
-plugins=hootisman.musiclessjingles.MusiclessJinglesPlugin
+plugins=hootisman.unmutedjingles.UnmutedJinglesPlugin
