--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,6 @@
 displayName=Unmuted Jingles
 author=hootisman
+support=https://github.com/hootisman/muted_level_jingles
 description=Plays jingles when music is muted
-tags=
+tags=jingle,music,mute,sound,hootisman,level
 plugins=hootisman.unmutedjingles.UnmutedJinglesPlugin
