--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ def runeLiteVersion = 'latest.release'
 def pluginMainClass = 'hootisman.unmutedjingles.UnmutedJinglesPluginTest'
 
 dependencies {
+    implementation 'net.runelite:jaco-mp3-player:0.10.2-rl1'
     compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
 
     compileOnly 'org.projectlombok:lombok:1.18.30'
